UV editing Stitch crashes Blender with UV sync selection turned on (and hidden faces present)) #106396

Closed
opened 2023-03-31 18:20:31 +07:00 by Lucas Feld · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: 3.4.1

Caused by 8f543a73ab

Short description of error
UV editing Stitch crashes Blender with UV sync selection turned on.

Exact steps for others to reproduce the error
Load Sample file,
edge mode
use selected edges
![image](uploading ...)
attempt to stitch
get crash
I have randomly been getting crashes when stitching in 3.5, this just happens to be a spot I could reproduce.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: 3.4.1 Caused by 8f543a73ab **Short description of error** UV editing Stitch crashes Blender with UV sync selection turned on. **Exact steps for others to reproduce the error** Load Sample file, edge mode use selected edges ![image](uploading ...) attempt to stitch get crash I have randomly been getting crashes when stitching in 3.5, this just happens to be a spot I could reproduce.
Lucas Feld added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-31 18:20:32 +07:00

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-03 13:12:18 +07:00

Caused by 8f543a73ab

(3.4 crashes, too btw. only 3.2 is reliable in that regard).

When this gets fixed (I think I got a fix for this, will put on my table), the fix should be added to #100749 (LTS backports).

Caused by 8f543a73abc (3.4 crashes, too btw. only 3.2 is reliable in that regard). When this gets fixed (I think I got a fix for this, will put on my table), the fix should be added to #100749 (LTS backports).
Philipp Oeser changed title from UV editing Stitch crashes Blender with UV sync selection turned on to UV editing Stitch crashes Blender with UV sync selection turned on (and hidden faces present)) 2023-04-03 14:29:21 +07:00
Philipp Oeser added the
Module
Modeling
Interest
UV Editing
labels 2023-04-03 14:29:50 +07:00
Philipp Oeser self-assigned this 2023-04-03 14:29:57 +07:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-04 12:11:04 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106396
There is no content yet.