Fix #106396: UV stitch crash with hidden faces

This was the case with hidden faces and `Sync Selection` turned ON.

Caused by 8f543a73abc42843fb924fc6d849e3055e3ae011.

Since 8f543a73abc42843fb924fc6d849e3055e3ae011, the UV element map
respects the hidden state of geometry, but stitching [which also
respected this on its own even prior to the culprit commit in its
calculation of connectivity] did this differently [it only skipped
hidden geo when UV_SYNC_SELECTION was OFF -- even though UVs would not
be visible which is probably the real error here, I believe there is
this principle that we "dont act on stuff we dont see"].

To fix this, also skip hidden geo (even with UV_SYNC_SELECTION = ON) in
the stitch calculation of connectivity, just as
`BM_uv_element_map_create` does it.

Should go into 3.3 LTS as well.

Pull Request: https://projects.blender.org/blender/blender/pulls/106493